Visualize data movie count by language

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -26,6 +26,10 @@
     <div id="customer-by-amount"></div>
   </div>
 
+  <div class="container">
+    <div id="movie-count-by-language"></div>
+  </div>
+
   <script src="charts.js"></script>
 </body>
 </html>
